syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.course";
option java_outer_classname = "CourseProto";
import "user.proto";

message GetCourseRequest {
  string id = 1;
}

message CourseResponse {
  string id = 1;
  string title = 2;
  string short_description = 3;
  string long_description = 4;
  string thumbnail_url = 5;
  double rating = 6;
  string introductory_video = 7;
  string language = 8;
  double original_price = 9;
  double final_price = 10;
  Teacher instructor = 11;
}

// get bulk course
message GetCoursesRequest {
  repeated string course_ids = 1;
}

message GetCoursesResponse {
  repeated CourseResponse courses = 1;
}

message EnrolledCoursesRequest {
  string student_id = 1;
  string instructor_id = 2;
  string user_role = 3;
}

message GetCourseAdminDataResponse {
  int64 totalCourse = 1;
  int64 totalInstructor = 2;
}

message GetCourseAndStudentResponse {
  int64 totalCourse = 1;
  int64 totalStudent = 2;
}

message GetChartDataRequest {
  int64 year = 1;
  string userId = 2;
}

message GetChartDataResponse {
  string year = 1;
  repeated MonthlyChartData monthlyData = 2;
}

message MonthlyChartData {
  int64 month = 1;
  double revenue = 2;
  double profit = 3;
  int64 studentCount = 4;
}

message HasPurchasedCourseRequest {
  string courseId = 1;
  string userId = 2;
}

message HasPurchasedCourseResponse {
  bool hasPurchased = 1;
}

message UpdateCourseRatingRequest {
  string courseId = 1;
  double rating = 2;
}

message UpdateCourseRatingResponse {
  bool isSucces = 1;
}

message IsInstructorRequest {
  string userId = 1;
  string courseId = 2;
}

message IsInstructorResponse {
  bool isInstructor = 1;
}